# justified-playground

./: .gitignore  .sosrc  README.md  justified-playground.cabal  stack.yaml
src/: Main.hs  MyImpl.hs
