name:                justified-playground
version:             0.1.0.0
synopsis:            Playground for the "justified-containers" library
description:         Playground for the "justified-containers" library.
homepage:            https://github.com/githubuser/justified-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable justified-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , containers
    , MonadRandom
    , random
    , array
    , justified-containers

executable myimpl
  hs-source-dirs:      src
  main-is:             MyImpl.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , containers

